# fastapi-data-service

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/app/: main.py
src/app/api/v1/: crash.py  demo_error.py  echo.py  health.py
src/app/core/: errors.py  logger.py  request_context.py  settings.py
src/app/core/middlewares/: request_id.py
src/app/schemas/: echo.py
tests/: test_demo_error.py  test_health.py  test_internal_error.py  test_logger.py  test_request_id.py  test_settings.py  test_validation_error.py
